--- a/puzzle_ext/manifest.json
+++ b/puzzle_ext/manifest.json
@@ -11,9 +11,9 @@
 {
   "manifest_version": 2,
 
-  "name": "p5 Easy",
-  "author": "Pippin Barr",
-  "description": "This extension inserts a p5 canvas onto the current page.",
+  "name": "Locked",
+  "author": "Alexander Charette",
+  "description": "This extension requires that the user complete a puzzle before being able to access a webpage.",
   "version": "1.0",
 
   "icons": {  "16" : "icon.png",
@@ -36,7 +36,7 @@
   },
 
   "browser_action": {
-    "default_title": "p5 is Good.",
+    "default_title": "You can solve this.",
     "default_icon": {
       "19": "icon_19.png"
     }
